# kolya

./: CMakeLists.txt  build.sh
src/: client.cpp  client.h  host.cpp  host.h
src/connections/: conn.h  conn_mq.cpp  conn_mq.h  conn_pipe.cpp  conn_pipe.h  conn_shm.cpp  conn_shm.h
